--- a/index.html
+++ b/index.html
@@ -9,7 +9,10 @@
 </head>
 <body>
     <main>
-        <h3>Quote of the Day</h3>
+        <header>
+            <h3>Quote of the Day</h3>
+            <button id="copy-btn" title="copy"><img src="./asset/copy_icon.png" alt=""></button>
+        </header>
         <div class="container">
             <p id="quote"></p>
             <p id="author"></p>
