share on twitter added

--- a/index.html
+++ b/index.html
@@ -11,7 +11,10 @@
     <main>
         <header>
             <h3>Quote of the Day</h3>
-            <button id="copy-btn" title="copy"><img src="./asset/copy_icon.png" alt=""></button>
+            <div class="add-ons">
+                <button id="copy-btn" title="copy"><img src="./asset/copy_icon.png" alt=""></button>
+                <button id="share-tweeter"><img src="./asset/twitter_icon.png" alt=""></button>
+            </div>
         </header>
         <div class="container">
             <p id="quote"></p>
